ver 0.227 prelazak granice, settings

--- a/putninalozi/templates/about.html
+++ b/putninalozi/templates/about.html
@@ -1,4 +1,25 @@
 {% extends "layout.html" %}
 {% block content %}
-    <h1>About Page</h1>
+<h1>O Softveru</h1>
+<br>
+<h3>putninalozi.online je softver koji omoguća izradu, evidenciju i štampu putnih naloga za službena putovanja u zemlji i inostranstvu. On omogućava umrežavanje korisnika koji zajednički mogu da rade na generisanju, popunjavanju i knjiženju putnih naloga. Softver je razvio Studio Implicit, firma sa bogatim iskustvom u razvoju poslovnih rešenja.</h3>
+<br>
+<div class="content-section">
+  <h3>Zašto da koristite naš softver?</h3>
+  <p class='text-muted'>
+    <ul class="list-group">
+      <li class="list-group-item list-group-item-light"><small> - Softver je jednostavan za korišćenje</small></li>
+      <li class="list-group-item list-group-item-light"><small> - Pristup softveru je moguć u bilo kom trenutku i odakle god da radite</small></li>
+      <li class="list-group-item list-group-item-light"><small> - Automatsko generisanje popunjenog putnog naloga i putnog računa</small></li>
+      <li class="list-group-item list-group-item-light"><small> - Automatski obračun dnevnica i troškova nastalih na službenom putovanju</small></li>
+      <li class="list-group-item list-group-item-light"><small> - Automatsko prosleđivanje odobrenog putnog naloga računovodstvu</small></li>
+      <li class="list-group-item list-group-item-light"><small> - Jednostavan odabir vozila kojim se ide na službeno putovanje iz prethodno kreirane baze vozila</small></li>
+      <li class="list-group-item list-group-item-light"><small> - Ukoliko više osoba putuje jednim vozilom na službeni put, softver olakšava izradu putnih naloga za svaku od njih</small></li>
+      <li class="list-group-item list-group-item-light"><small> - Brza pretraga po različitim kriterijumima</small></li>
+      <li class="list-group-item list-group-item-light"><small> - Softver radi u cloud-u, nije potrebno instaliranje</small></li>
+    </ul>
+  </p>
+</div>
+
+<h2>Uz naš softver, svaki put je srećan put!</h2>
 {% endblock content%}
