--- a/putninalozi/templates/travel_warrant.html
+++ b/putninalozi/templates/travel_warrant.html
@@ -97,6 +97,58 @@
                   {{ form.abroad_contry(class="form-control form-control-lg") }}
               {% endif %}
           </div>
+          <div class="card-body">
+            {{ form.daily_wage_abroad.label(class="form-control-label") }}
+              {% if form.daily_wage_abroad.errors %}
+                  {{ form.daily_wage_abroad(class="form-control form-control-lg is-invalid") }}
+                  <div class="invalid-feedback">
+                      {% for error in form.daily_wage_abroad.errors %}
+                          <span>{{ error }}</span>
+                      {% endfor %}
+                  </div>
+              {% else %}
+                  {{ form.daily_wage_abroad(class="form-control form-control-lg") }}
+              {% endif %}
+          </div>
+          <div class="card-body">
+            {{ form.daily_wage_abroad_currency.label(class="form-control-label") }}
+              {% if form.daily_wage_abroad_currency.errors %}
+                  {{ form.daily_wage_abroad_currency(class="form-control form-control-lg is-invalid") }}
+                  <div class="invalid-feedback">
+                      {% for error in form.daily_wage_abroad_currency.errors %}
+                          <span>{{ error }}</span>
+                      {% endfor %}
+                  </div>
+              {% else %}
+                  {{ form.daily_wage_abroad_currency(class="form-select form-select-lg") }}
+              {% endif %}
+          </div>
+          <div class="col form-box">
+            {{ form.contry_leaving.label(class="form-control-label") }}
+              {% if form.contry_leaving.errors %}
+                  {{ form.contry_leaving(class="form-control form-control-lg is-invalid") }}
+                  <div class="invalid-feedback">
+                      {% for error in form.contry_leaving.errors %}
+                          <span>{{ error }}</span>
+                      {% endfor %}
+                  </div>
+              {% else %}
+                  {{ form.contry_leaving(class="form-control form-control-lg", type="datetime-local") }}
+              {% endif %}
+          </div>
+          <div class="col form-box">
+            {{ form.contry_return.label(class="form-control-label") }}
+              {% if form.contry_return.errors %}
+                  {{ form.contry_return(class="form-control form-control-lg is-invalid") }}
+                  <div class="invalid-feedback">
+                      {% for error in form.contry_return.errors %}
+                          <span>{{ error }}</span>
+                      {% endfor %}
+                  </div>
+              {% else %}
+                  {{ form.contry_return(class="form-control form-control-lg", type="datetime-local") }}
+              {% endif %}
+          </div>
         </div>
       </div>
       </div>
