--- a/putninalozi/templates/travel_warrant_list.html
+++ b/putninalozi/templates/travel_warrant_list.html
@@ -70,7 +70,9 @@
       <tbody>
         {% for warrant in warrants %}
         <tr>
-          <td class="align-middle"> <a class="mr-2 btn btn-info" href="{{ url_for('travel_warrants.travel_warrant_profile', warrant_id=warrant.travel_warrant_id) }}" role="button" title="Uredi Putni Nalog"> {{ warrant.travel_warrant_number }} </a> </td>
+          <td class="align-middle"> <div class="btn-group">
+            <a class="btn btn-info" href="{{ url_for('travel_warrants.travel_warrant_profile', warrant_id=warrant.travel_warrant_id) }}" role="button" title="Uredi Putni Nalog"> {{ warrant.travel_warrant_number }}</a><a class="btn btn-outline-info" href="{{ url_for('travel_warrants.download_file', file_name=warrant.file_name) }}">&#x21E9;</a>
+          </div> </td>
           <td class="align-middle"> {{ warrant.travelwarrant_company.companyname }} </td>
           <td class="align-middle"> {{ warrant.travelwarrant_user.name }} {{ warrant.travelwarrant_user.surname }} </td>
           <td class="align-middle"> {% if warrant.together_with %} Putuje sa: <br> {{warrant.together_with}} {% endif %} {{ warrant.other }} {{ warrant.personal_type }} {{ warrant.travelwarrant_vehicle.vehicle_type }} <br> {{warrant.travelwarrant_vehicle.vehicle_brand}} <br> {{warrant.travelwarrant_vehicle.vehicle_registration}} </td>
@@ -92,7 +94,9 @@
         {% for warrant in warrants %}
         {% if current_user.user_company.id == warrant.travelwarrant_company.id %}
         <tr>
-          <td class="align-middle"> <a class="mr-2 btn btn-info" href="{{ url_for('travel_warrants.travel_warrant_profile', warrant_id=warrant.travel_warrant_id) }}" role="button" title="Uredi Putni Nalog"> {{ warrant.travel_warrant_number }} </a> </td>
+          <td class="align-middle"> <div class="btn-group">
+            <a class="btn btn-info" href="{{ url_for('travel_warrants.travel_warrant_profile', warrant_id=warrant.travel_warrant_id) }}" role="button" title="Uredi Putni Nalog"> {{ warrant.travel_warrant_number }}</a><a class="btn btn-outline-info" href="{{ url_for('travel_warrants.download_file', file_name=warrant.file_name) }}">&#x21E9;</a>
+          </div></td>
           <td class="align-middle"> {{ warrant.travelwarrant_user.name }} {{ warrant.travelwarrant_user.surname}} </td>
           <td class="align-middle"> {% if warrant.together_with %} Putuje sa: <br> {{warrant.together_with}} {% endif %} {{ warrant.other }} {{ warrant.personal_type }} {{ warrant.travelwarrant_vehicle.vehicle_type }} <br> {{warrant.travelwarrant_vehicle.vehicle_brand}} <br> {{warrant.travelwarrant_vehicle.vehicle_registration}} </td>
           <td class="align-middle"> {{ warrant.start_datetime.date() }} </td>
@@ -115,7 +119,9 @@
         {% for warrant in warrants %}
         {% if current_user.id == warrant.travelwarrant_user.id %}
         <tr>
-          <td class="align-middle"> <a class="mr-2 btn btn-info" href="{{ url_for('travel_warrants.travel_warrant_profile', warrant_id=warrant.travel_warrant_id) }}" role="button" title="Uredi Putni Nalog"> {{ warrant.travel_warrant_number }} </a> </td>
+          <td class="align-middle"> <div class="btn-group">
+            <a class="btn btn-info" href="{{ url_for('travel_warrants.travel_warrant_profile', warrant_id=warrant.travel_warrant_id) }}" role="button" title="Uredi Putni Nalog"> {{ warrant.travel_warrant_number }}</a><a class="btn btn-outline-info" href="{{ url_for('travel_warrants.download_file', file_name=warrant.file_name) }}">&#x21E9;</a>
+          </div> </td>
           <td class="align-middle"> {{ warrant.travelwarrant_user.name }} {{ warrant.travelwarrant_user.surname}} </td>
           <td class="align-middle"> {% if warrant.together_with %} Putuje sa: <br> {{warrant.together_with}} {% endif %} {{ warrant.other }} {{ warrant.personal_type }} {{ warrant.travelwarrant_vehicle.vehicle_type }} <br> {{warrant.travelwarrant_vehicle.vehicle_brand}} <br> {{warrant.travelwarrant_vehicle.vehicle_registration}} </td>
           <td class="align-middle"> {{ warrant.start_datetime.date() }} </td>
