--- a/putninalozi/templates/settings.html
+++ b/putninalozi/templates/settings.html
@@ -34,6 +34,7 @@
         </div>
         <div class="">
           <br>
+          <a class="btn btn-info" href="{{url_for('main.home')}}">Nazad</a>
           {{ form.submit(class="btn btn-outline-primary") }}
         </div>
 
