ver 0.312 introduce vs code

--- a/putninalozi/templates/settings.html
+++ b/putninalozi/templates/settings.html
@@ -32,6 +32,13 @@
                 {{ form.daily_wage_abroad(class="form-control form-control-lg") }}
             {% endif %}
         </div>
+        <br>
+        <br>
+        <legend class="border-bottom mb-3">Buduće nadogradnje softvera:</legend>
+        <div class="form-check form-switch">
+          <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
+          <label class="form-check-label" for="flexSwitchCheckDefault">Slanje mejla blagajniku</label>
+        </div>
         <div class="">
           <br>
           <a class="btn btn-info" href="{{url_for('main.home')}}">Nazad</a>
